增加5++的错误输出格式
