# docs/swagger.json
@@ -516,5 +516,12 @@
                 }
             }
         }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "sk",
+            "in": "header"
+        }
     }
 }
